completely rebuilds the Participants table in order to fix layout bugs on Firefox and IE

--- a/WebApp/client/app.css
+++ b/WebApp/client/app.css
@@ -441,52 +441,6 @@
     margin: 0;
   }
 
-  .table {
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    border-collapse: collapse;
-    white-space: nowrap;
-    font-size: 13px;
-    background-color: rgb(255,255,255);
-  }
-
-  .table-header,
-  .table-row {
-    vertical-align: top;
-    height: 48px;
-    border-top: 1px solid rgba(0, 0, 0, 0.12);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-    padding: 6px;
-  }
-
-  .table-row-with-note {
-    height: 68px;
-  }
-
-  .table-row:hover {
-    background-color: #eeeeee;
-  }
-
-  .table-row.is-selected {
-    background-color: #e0e0e0;
-  }
-
-  .table-data {
-    overflow: hidden;
-    padding-right: 2px;
-    text-overflow: ellipsis;
-  }
-
-  .table-data-with-note {
-    padding-right: 2px;
-    overflow:visible;
-    text-overflow: unset;
-    height: 68px;
-  }
-
-  .table-cell-with-note {
-    margin-top:19px;
-  }
-
 
   /* =========================================================================== */
   /*
